tests/type-errors/state_is_bad_value.arl
archetype state_is_bad_value

states =
| Init
| Running

entry exec () {
   state is Created
   effect {
     ()
   }
}
